--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     ]};
 
   const STORY_IMGS = {
-    intro: [IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2],
+    intro: [IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2],
     L2: [IMG.L2_1, IMG.L2_2, IMG.L2_3],
     L3: [IMG.L3_1, IMG.L3_2, IMG.L3_3],
     L4: [IMG.L4_1, IMG.L4_2, IMG.L4_3],
