--- a/index.html
+++ b/index.html
@@ -320,7 +320,28 @@
 "어쩐지,\n\n유리구슬처럼 투명한 그녀의 눈이\n\n나를 꿰뚫는 것 같았다."
     ],
     L2: [
-      "L2레벨업\\nL2레벨업\\nL2레벨업\\nL2레벨업",
+      "","그 애는 말이 적었다.\n\n정확히 말하자면, 거의 없었다.\n\n대답을 듣기보다는 고개 끄덕임이나 눈짓으로 모든 걸 해결하려는 타입.\n\n딱히 그게 싫었던 건 아니지만,\n\n같은 집에 사는 이상,\n\n아무 말도 안 하고 지낸다는 건 꽤… 뭔가, 그렇잖아?",
+"그래도 요 며칠 사이, 변화가 생겼다.\n\n가끔은 눈을 맞추고, 내가 무언가를 물으면 짧게나마 대답이 돌아온다.\n\n“응.”\n\n“그건… 아니야.”\n\n“맛있었어.”\n\n그 정도의 말들이지만, 묘하게 기분이 좋았다.\n\n그 애의 마음이, 조심스럽게 문을 열고 있는 듯한 느낌.",
+"요즘 그녀는 시험공부에 한창이다.\n\n조용한 방 안, 책상에 기대 앉아 교과서를 펼친 채 고개를 숙이고 있는 모습은\n\n왠지 모르게 한 폭의 수채화처럼 느껴졌다.",
+"나는 그런 그녀의 곁에서 물을 떠다주고, 문제집을 넘겨주고,\n\n 때때로 조용히 응원을 건넸다.\n\n도움이 되었는지는 모르겠지만──",
+"그리고,\n\n시험 당일.",
+"나는 평소보다 일찍 일어나 청소도 하고, 집안을 서성거렸다.\n\n정작 시험을 보는 건 내가 아닌데, 왜 이렇게 긴장이 되는 걸까.\n\nTV의 볼륨은 3칸, 창문은 반쯤 열어두고.\n\n마치 무언가를 맞이할 준비를 하듯, 조용히 그녀를 기다렸다.",
+"그리고, 오후.",
+"현관문이 열리고, 익숙한 발소리가 들려왔다.\n\n평소보다 조금 빠른 걸음.\n\n그게 의미하는 바는──",
+"“…돌아왔어.”",
+"희미한 숨결처럼 들린 한마디.\n\n나는 고개를 돌렸고, 그 애는 나를 바라보며 작게 웃었다.",
+"“시험, 잘 봤어. 덕분에.”",
+"말끝이 조금 떨렸지만, 그건 분명 진심이었다.\n\n부끄러움을 애써 숨기려는, 그런 미세한 표정 변화는\n\n오히려 더 큰 파장을 일으킨다.",
+"“…그랬구나. 다행이다.”",
+"나도 모르게 손이 올라갔다.\n\n그 애의 머리 위로.\n\n툭,\n\n그리고 부드럽게, 쓰다듬었다.",
+"하아.\n\n하고 나서야 깨달았다.\n\n이건 좀, 실례 아니었을까?",
+"“미안, 무심코…”",
+"급히 손을 내리려는 순간,\n\n팔뚝에 작고 따뜻한 무언가가 닿았다.",
+"그녀의 손.\n\n얇고 가느다란 손가락이\n\n내 팔을 살짝,\n\n정말 살짝 잡고 있었다.",
+"“………”",
+"말은 없었다.\n\n하지만 그 손끝에서 전해지는 감정은 분명했다.",
+"조금 더, 괜찮아.\n\n그녀의 방식으로 내게 말하고 있었다.",
+"고요한 방 안.\n\n두 사람 사이, 불어오는 봄바람처럼\n\n조금, 아주 조금.\n\n서로의 거리가 가까워진 날이었다.",
       "L2레벨업\\nL2레벨업\\nL2레벨업\\nL2레벨업",
       "L2레벨업\\nL2레벨업\\nL2레벨업\\nL2레벨업"
     ],
@@ -350,7 +371,7 @@
 
   const STORY_IMGS = {
     intro: [IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2],
-    L2: [IMG.L2_1, IMG.L2_2, IMG.L2_3],
+    L2: [IMG.L2_1, IMG.L2_1, IMG.L2_1, IMG.study, IMG.study, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet],
     L3: [IMG.L3_1, IMG.L3_2, IMG.L3_3],
     L4: [IMG.L4_1, IMG.L4_2, IMG.L4_3],
     L5: [IMG.L5_1, IMG.L5_2, IMG.L5_3],
