--- a/index.html
+++ b/index.html
@@ -343,9 +343,28 @@
 "조금 더, 괜찮아.\n\n그녀의 방식으로 내게 말하고 있었다.",
 "고요한 방 안.\n\n두 사람 사이, 불어오는 봄바람처럼\n\n조금, 아주 조금.\n\n서로의 거리가 가까워진 날이었다.",
     ],
-    L3: ["L3레벨업\\nL3레벨업\\nL3레벨업\\nL3레벨업",
-         "L3레벨업\\nL3레벨업\\nL3레벨업\\nL3레벨업",
-         "L3레벨업\\nL3레벨업\\nL3레벨업\\nL3레벨업"],
+    L3: ["","그녀는 요즘, 자주 창밖을 바라봤다.\n\n마치 창틀 너머에 무언가를 붙잡으려는 것처럼.\n\n방 안에 가득한 정적 속에서, 유일하게 바람이 스쳐가는 곳은 그 시선뿐이었다.",
+"그걸 본 순간, 알았다.\n\n──이건 좀 데리고 나가야겠다.",
+"“…저기, 혹시…”",
+"나는 괜히 목을 가다듬고 말을 꺼냈다.\n\n별로 특별한 목적지는 없었다.\n\n하지만 입 밖으로 꺼내는 순간, 마음속에 감춰둔 생각이 스스로를 배반했다.",
+"“천문관, 가볼래?”",
+"말끝은 어쩐지 쓸데없이 경쾌했다.\n\n그 말이 데이트 신청처럼 들리진 않았기를, 하고 바랐지만──",
+"사실, 조금은 바랐다.\n\n내가 뭐 그렇지, 뭐.\n\n모솔의 비애는 그 미련한 설렘에서 시작된다.",
+"천문관의 내부는 적당히 어두웠고,\n\n천장의 별빛은 마치 블랙홀 속에서 부서지는 유리조각처럼 반짝였다.",
+"그녀는 말이 없었다.\n\n하지만 그 조용함은 어색함이 아니라 몰입이었다.",
+"하늘을 올려다보는 작은 얼굴.\n\n입술은 살짝 열려 있었고, 두 눈은 별들 사이를 부유하는 유성처럼 반짝였다.",
+“와…” 같은 감탄조차 들리지 않았지만,\n\n그 눈빛 하나만으로도 충분했다.\n\n──아, 이 애 지금, 진짜 기쁘구나.",
+"플라네타륨의 끝자락, 마지막 별이 스르륵 사라지고 조명이 천천히 켜질 때까지,\n\n그녀는 단 한 번도 시선을 내리지 않았다.\n\n그 순간만큼은, 별들과 사랑에 빠진 사람 같았다.",
+"돌아가는 길,\n\n그녀가 입을 열었다.",
+"“……방금 본 별들, 이름… 알고 싶어.”",
+"낮은 목소리.\n\n하지만 그 속엔 어떤 열정 같은 게 담겨 있었다.",
+"“음, 그럼 다음엔… \n\n별자리 가이드북 하나 사서 같이 보러 갈까?”",
+"대답 대신,\n\n그녀는 내 쪽을 슬쩍 바라보았다.",
+"아까 본 별들처럼 맑은 눈.\n\n그리고, 아주 살짝 올라간 입꼬리.",
+"그건──\n\n말 없이 전해지는 ‘응’이었다.",
+"그 작은 미소 하나가,\n\n어쩌면 오늘 하루보다 더 반짝였는지도 모른다.",
+"하늘에 떠 있는 별보다,\n\n지금 내 곁에 있는 이 한 사람의 감정이 더 궁금해졌다.",
+"다음에 또, 함께 가자고 말할 수 있어서 다행이었다.\n\n…정말, 다행이었다."],
     L4: ["L4레벨업\\nL4레벨업\\nL4레벨업\\nL4레벨업",
          "L4레벨업\\nL4레벨업\\nL4레벨업\\nL4레벨업",
          "L4레벨업\\nL4레벨업\\nL4레벨업\\nL4레벨업"],
@@ -370,7 +389,7 @@
   const STORY_IMGS = {
     intro: [IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2, IMG.intro_2],
     L2: [IMG.L2_1, IMG.L2_1, IMG.L2_1, IMG.study, IMG.study, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.intro_1, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.L2_2, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet, IMG.pet],
-    L3: [IMG.L3_1, IMG.L3_2, IMG.L3_3],
+    L3: [IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.L3_1,  IMG.date_planetarium, IMG.date_planetarium, IMG.date_planetarium, IMG.date_planetarium, IMG.date_planetarium, IMG.L3_2,  IMG.L3_2,  IMG.L3_2,  IMG.L3_2,  IMG.L3_3, IMG.L3_3, IMG.L3_3, IMG.L3_3, IMG.L3_3, IMG.L3_3],
     L4: [IMG.L4_1, IMG.L4_2, IMG.L4_3],
     L5: [IMG.L5_1, IMG.L5_2, IMG.L5_3],
     L6: [IMG.L6_1, IMG.L6_2, IMG.L6_3],
