--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 "천문관의 내부는 적당히 어두웠고,\n\n천장의 별빛은 마치 블랙홀 속에서 부서지는 유리조각처럼 반짝였다.",
 "그녀는 말이 없었다.\n\n하지만 그 조용함은 어색함이 아니라 몰입이었다.",
 "하늘을 올려다보는 작은 얼굴.\n\n입술은 살짝 열려 있었고, 두 눈은 별들 사이를 부유하는 유성처럼 반짝였다.",
-“와…” 같은 감탄조차 들리지 않았지만,\n\n그 눈빛 하나만으로도 충분했다.\n\n──아, 이 애 지금, 진짜 기쁘구나.",
+"“와…” 같은 감탄조차 들리지 않았지만,\n\n그 눈빛 하나만으로도 충분했다.\n\n──아, 이 애 지금, 진짜 기쁘구나.",
 "플라네타륨의 끝자락, 마지막 별이 스르륵 사라지고 조명이 천천히 켜질 때까지,\n\n그녀는 단 한 번도 시선을 내리지 않았다.\n\n그 순간만큼은, 별들과 사랑에 빠진 사람 같았다.",
 "돌아가는 길,\n\n그녀가 입을 열었다.",
 "“……방금 본 별들, 이름… 알고 싶어.”",
